@@ -31,7 +31,7 @@ EXAMPLE1
      print "Count of Czech CPAN authors: $count\n";
 
      # Output:
-     # Count of Czech CPAN authors: 39
+     # Count of Czech CPAN authors: 40
 
 EXAMPLE2
      use strict;
@@ -71,25 +71,26 @@ EXAMPLE2
      #     [17] "MJFO",
      #     [18] "PAJAS",
      #     [19] "PASKY",
-     #     [20] "PEK",
-     #     [21] "POPEL",
-     #     [22] "PSME",
-     #     [23] "RUR",
-     #     [24] "RVASICEK",
-     #     [25] "SARFY",
-     #     [26] "SEIDLJAN",
-     #     [27] "SKIM",
-     #     [28] "SMRZ",
-     #     [29] "STRAKA",
-     #     [30] "TKR",
-     #     [31] "TRIPIE",
-     #     [32] "TYNOVSKY",
-     #     [33] "VARISD",
-     #     [34] "VASEKD",
-     #     [35] "YENYA",
-     #     [36] "ZABA",
-     #     [37] "ZEMAN",
-     #     [38] "ZOUL"
+     #     [20] "PCIMPRICH",
+     #     [21] "PEK",
+     #     [22] "POPEL",
+     #     [23] "PSME",
+     #     [24] "RUR",
+     #     [25] "RVASICEK",
+     #     [26] "SARFY",
+     #     [27] "SEIDLJAN",
+     #     [28] "SKIM",
+     #     [29] "SMRZ",
+     #     [30] "STRAKA",
+     #     [31] "TKR",
+     #     [32] "TRIPIE",
+     #     [33] "TYNOVSKY",
+     #     [34] "VARISD",
+     #     [35] "VASEKD",
+     #     [36] "YENYA",
+     #     [37] "ZABA",
+     #     [38] "ZEMAN",
+     #     [39] "ZOUL"
      # ]
 
 DEPENDENCIES
