@@ -1,4 +1,5 @@
 0.27
+ - Add PCIMPRICH CPAN account.
 
 0.26 2020-03-10T12:52:38+01:00
  - Add SARFY CPAN account.
